--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "highcharts": "^4.2.5",
     "jquery": "^2.2.2",
     "json-loader": "^0.5.4",
     "localforage": "^1.4.0",
